Snap a resize, and hold the heatmap still while it runs
Three things the corner resize was missing.

A resize now snaps to the same rests a move does: flush with another
module's edge or center, a margin clear of it, or against the screen's
margins or center. Only one edge can win, since both edges of a corner
are the same number, so the nearer rest takes it; a rest the setting
cannot reach — the dial's diameter comes in steps of two, so half its
widths do not exist — is passed over for one it can. The guides are
computed from the module as it ends up rather than from the size that
was aimed at, so a line is drawn only where an edge genuinely lies on it.

The grip under the pointer is drawn longer and thicker than the others,
and the white hover outline goes at the same moment, because that
outline means the module is what a drag would pick up and carry and over
a grip it no longer is. The grown grip is deliberately drawn larger than
the area it answers to: the pointer is inside the plain reach whenever
the larger mark is showing, so it never claims ground a click would not.

Resizing the velocity graph held the frame for a heatmap rebuild on
every pixel of the drag, around 30ms each at the default size and worse
as it grows. The graph now stretches the field it has for the length of
the drag and builds the exact one on release. Only the scale changes
under a drag, never the domain, so the stretched field describes exactly
the velocities the graph is drawing and is wrong in nothing but
resolution.

Also corrects the design notes, which still described the anchor-based
positioning the editor replaced and called the editor itself pending.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>